samples/_failures_safe/1761427070_067458_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5ea7e4b.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f5ea7e4b.c:183:20: error: missing terminating " character
  183 |             printf("Vertex %d: %d\n
      |                    ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f5ea7e4b.c:183:13: error: expected expression at end of input
  183 |             printf("Vertex %d: %d\n
      |             ^~~~~~
./samples/SAFE/__tmp_f5ea7e4b.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5ea7e4b.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5ea7e4b.c:183:13: error: expected declaration or statement at end of input
